<menu xmlns:android="http://schemas.android.com/apk/res/android" 
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/next"
        android:title="@string/next"/>
    <item
        android:id="@+id/previous"
        android:title="@string/previous"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always"
        android:title="@string/share"/>
    <item
        android:id="@+id/about"
        android:title="@string/about"/>
    <item
        android:id="@+id/notification_settings"
        android:title="@string/notification_settings"/>
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_action_home"
        app:showAsAction="ifRoom"
        android:title="@string/home"/>
    <item
        android:id="@+id/close"
        android:title="@string/close"/>

</menu>